# lingua-py

./: Cargo.toml  README.md  linguars.pyi
.github/workflows/: CI.yml
src/: lib.rs
tests/: test_linguars.py
